version 3.0 2017/m/d
- removed old and deprecated piece of code (replacing with new FFmpeg's API)
- add -X option to include video extension in output filename

version 200808a
- release year and month is now used as the version number.
- fix aspect ratio bugs. mtn now should behave the same as vlc's snapshot.
- bug: the Video: lines in stderr no longer show input scaling info ( => WxH).
  scaling info is still shown in the final output image and the info text file.
  this cannot be fixed easily.
- add -a aspect_ratio option to override input file's display aspect ratio.
- add non-seek mode -- slower but more accurate timing.
  non-seek is good for small time step or small clips.
- seek or non-seek mode is auto selected and can be overridden by -z or -Z.
- fix possible extra space char after video size info of previous version.
- make shot size even. this should fix vertical dots when # of column is odd.
- output files modified since program start time will not be overwritten.
- the finding of new shots to evade blank & blur is improved.
  # of skipped shots should be reduced.
- negative time step (-s) is removed. it doesn't seem to be useful.
- previous versions reported # of decoded shots/s; changed to # of final shots/s
- default info_color, background color, and jpeg quality has been changed.

version 2.45 2008/06/28
- individual images saved (-I option) now have HH_MM_SS as a part of the suffix
  (requested by RACER LUPINE (racerlupine)).
- fix issues with flv files. it should work now. (bug reported by: dragonbook)
- prefer average bitrate calculated from file_size/duration
- remove [PAR DAR] from ffmpeg's avcodec_string. this might produce an 
  extra space char after video size information.
- skip non key packets when a key frame is difficult to find.
  this seems to help a lot for files with vorbis audio and files with
  "warning: first frame is no keyframe".
- win32 binary: gcc4 is used instead of gcc3

version 2.44 2007/12/05