@@ -24,6 +24,7 @@ options: (and default values)
   -B 0.0 : omit this seconds from the beginning
   -c 3 : # of column
   -C -1 : cut movie and thumbnails not more than the specified seconds; <=0:off
+  -d #: recursion depth; 0:immediate children files only
   -D 12 : edge detection; 0:off >0:on; higher detects more; try -D4 -D6 or -D8
   -E 0.0 : omit this seconds at the end
   -f tahomabd.ttf : font file; use absolute path if not in usual places
@@ -45,6 +46,7 @@ options: (and default values)
   -P : dont pause before exiting; override -p
   -r 0 : # of rows; >0:override -s
   -s 120 : time step between each shot
+  -S #: select specific stream number
   -t : time stamp off
   -T text : add text above output image
   -v : verbose mode (debug)
