@@ -1,6 +1,8 @@
 version 3.0 2017/m/d
 - removed old and deprecated piece of code (replacing with new FFmpeg's API)
 - add -X option to include video extension in output filename
+- add -S option to select video stream
+- add -d option to set recursion depth
 
 version 200808a
 - release year and month is now used as the version number.
